# open-ippoc

./: .env.example  .gitignore  BRAIN_AGENT_INTEGRATION.md  BRAIN_BASED_REFACTORING.md  CAPABILITIES.md  CHANGELOG.md  CODEOWNERS  Cargo.toml  DEPLOY.md  DOC.md  Dockerfile  ENHANCEMENT_SUMMARY.md  FEDERATION_BROADCAST.md  IPPOC_DOCUMENTATION_MAP.md  IPPOC_INTEGRATED_FLOW.md  LOCAL_INSTALL_GUIDE.md  MAIN_REPO_MANAGEMENT.md  OPTIMIZATION_COMPLETION_REPORT.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  README.md  SYSTEM_CANON.md  SYSTEM_ENHANCEMENT_SUMMARY.md  VISION.json  awareness_report.json  cleanup_directory.sh  commit_msg.txt  debug-proxy.js  demo_swarm.py  docker-compose.microservices.yml  docker-compose.simple.yml  docker-compose.yml  enhanced-proxy.js  final_integration_test.py  final_status_report.txt  generate_openclaw_fs.sh  install.sh  ippoc_tui.js  launch_ippoc_tui.js  list_gemini_models.py  maksad_demonstration_results.json  (+17 more)
.agent/rules/: gitrules.md  langchain.md  rules.md  skills.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ai-pr-reviewer.yml  check-protocol.yml  system-verification.yml
.jules/: bolt.md  sentinel.md
body/: Cargo.toml  mod.rs
body/immune/: mod.rs
body/immune/git-evolution/: Cargo.toml
body/immune/git-evolution/src/: lib.rs
body/mesh/: Cargo.toml  mod.rs
body/mesh/inter-org/: Cargo.toml
body/mesh/inter-org/src/: protocol.rs
body/mesh/nervous-system/src/: discovery.rs  lib.rs  transport.rs
body/mesh/src/: crypto.rs  economy.rs  identity.rs  lib.rs  mesh.rs  messages.rs  peer.rs
body/sensors/kernel-bridge/src/: ippoc_sensor.rs
body/src/: identity.rs  isolation.rs  main.rs  protocol.rs  roles.rs  sandbox.rs  vllm.rs
brain/: __init__.py  explain.py  requirements.txt
brain/api/: __init__.py
brain/cerebellum/: Cargo.toml  __init__.py
brain/cerebellum/src/: chat.rs  lib.rs  main.rs
brain/core/: autonomy.py  bootstrap.py  canon.py  economy.py  federation.py  genome.py  intents.py  ledger.py  orchestrator.py
brain/cortex/: list_models.py  persistence.py  server.py  two_tower.py
brain/evolution/: Cargo.toml  evolver.py  git_driver.py
brain/evolution/src/: lib.rs
brain/gateway/: openclaw_adapter.py  openclaw_guard.py  vitals.py
brain/maintainer/: evolution_loop.py  memory.py  mentor.py  scheduler.py  types.py
brain/memory/: cached_hippocampus.py
brain/tests/: test_api_tools.py  test_maintainer_loop.py  test_tool_flow.py  verify_alive.py  verify_autonomous_will.py  verify_autonomy_wiring.py  verify_chaos.py  verify_economy.py  (+14 more)
config/: envoy.yaml
data/: action_log.jsonl  autonomy_state.json  economy.json  explainability.json  orchestrator.db  social_trust.json  test_economy.json
deploy/: docker-compose.prod.yml  k8s-deployment.yml
docs/: 00_Neural_Blueprint.md  03_IPPOC_DL_v2_Blueprint.md  04_Human_Artifact_Decoder.md  05_Complete_Engine_Map.md  11_Cognitive_Neural_System.md  13_Cognitive_Packet_Architecture.md  AI_CODE_REVIEW.md  SOURCE_INTEGRATION.md  phase7a_summary.md  swarmlaw.md
git-hooks/: pre-push
infra/src/cortex/cerebellum/: Cargo.toml
infra/src/cortex/cerebellum/src/: main.rs
infra/src/soma/mesh/: Cargo.toml
infra/src/soma/mesh/inter-org/src/: lib.rs
infra/src/soma/mesh/nervous-system/src/: lib.rs
infra/src/soma/mesh/src/: lib.rs  messages.rs
invariants/: COMMUNICATION.md  ECONOMY.md  IDENTITY.md  SAFETY.md
memory/: Cargo.toml  requirements.txt
memory/api/: server.py
memory/episodic/: __init__.py
memory/logic/: consolidator.py  graph.py
memory/logic/nodes/: index_vectors.py  update_procedural.py
memory/procedural/: manager.py
memory/semantic/: __init__.py  rag.py
memory/src/: lib.rs
schemas/: thought.capnp
scripts/: cleanup_openclaw_logs.sh  deploy-microservices.sh  manage-main-repo.sh  organ-sync.sh  project-map.sh  start_brain.sh  start_tui.sh
src/: start.sh  system.yaml
src/cortex/evolution/: Cargo.toml  __init__.py  epe.py  epe_minimal.py  evolver.py
src/cortex/evolution/src/: lib.rs
src/mnemosyne/: Cargo.toml  __init__.py  core.py  requirements.txt
src/mnemosyne/api/: Dockerfile  server.py
src/mnemosyne/episodic/: manager.py
src/mnemosyne/graph/: manager.py
src/mnemosyne/hidb/: __init__.py  client.py  hidb.py  models.py
src/mnemosyne/logic/: causal_tracker.py  state.py
src/mnemosyne/logic/nodes/: decay_prune.py  extract_facts.py  fetch_events.py  index_vectors.py
src/mnemosyne/procedural/: manager.py
src/mnemosyne/semantic/: rag.py
src/mnemosyne/src/: lib.rs
src/mnemosyne/tests/: test_core.py  test_enhanced_rag.py  test_forget.py  test_graph_manager_sql.py  test_graph_optimization.py  test_hidb.py  test_improved_memory.py  test_semantic_index.py  test_semantic_rag.py
src/soma/: Cargo.toml  body_brain_integration.py  brain_hal_awareness.py  build.rs  hal_power_core.py  integrated_hal_system.py  log_cli.py  log_dashboard.py  log_monitor_service.py  unified_life_system.py
src/soma/data/nodes/5162e190221a1efbc76ded6e1a9fd8d5104ad51eaafb0a0e64f41b732473820d/data/: identity.key
src/soma/immune/git-evolution/: Cargo.toml
src/soma/immune/git-evolution/src/: lib.rs
src/soma/mesh/inter-org/: Cargo.toml
src/soma/mesh/inter-org/src/: router.rs
src/soma/mesh/memory/: reputation.json
src/soma/mesh/nervous-system/src/: discovery.rs
src/soma/mesh/nodes/3b8f905d7b8e8168922f14c13730f4350dee02abc43b18633bdfadaf2c7034f3/data/: identity.key
src/soma/mesh/nodes/ca81082a673fd5d220c84f050543a93eaa9ae9d3815521cd4f26d72f4f8002ef/data/: identity.key  reputation.json
src/soma/mesh/src/: economy.rs  gossip.rs  identity.rs  lifecycle.rs  peer.rs  transport.rs
src/soma/proto/: body.proto
src/soma/scripts/: vllm_service.sh
src/soma/sensors/kernel-bridge/: Cargo.toml  Kbuild
src/soma/sensors/kernel-bridge/src/: ippoc_sensor.rs  lib.rs
src/soma/src/: grpc_service.rs  main.rs
tests/: swarm_simulation.py  test_github_workflows.py  test_memory_graph.py
tools/: quickstart-no-docker.sh  quickstart.sh  review_code.sh  run-all.sh  setup-databases.sh  test_integration.sh
(+312 files in other folders)
