[workspace]
resolver = "2"
members = [
    "body",
    "body/mesh",
    "body/mesh/inter-org",
    "body/immune/git-evolution",
    "brain/cerebellum",
    "brain/evolution",
    "memory",
]

[workspace.dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
capnp = "0.19"
capnpc = "0.19"
quinn = "0.10"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
bincode = "1.3"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
