[package]
name = "hidb"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid"] }
redis = { version = "0.24", features = ["tokio-comp"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
serde_json = "1.0"
tracing = "0.1"
