[package]
name = "cerebellum"
version = "0.1.0"
edition = "2021"
description = "The Learning Engine: Paper-to-Code and Self-Fine-Tuning for IPPOC-OS"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3"
serde = { workspace = true }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
chrono = "0.4"
# For parsing papers/HTML
scraper = "0.18"
# For integration with OpenClaw/Node
nervous-system = { path = "../../body/mesh" }
hidb = { path = "../../memory" }
