[package]
name = "brain-evolution"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
git-evolution = { path = "../../body/immune/git-evolution" }
cerebellum = { path = "../cerebellum" }
tokio = { workspace = true }
chrono = { workspace = true }
