
[package]
name = "ippoc-node"
version = "0.1.0"
edition = "2021"

[build-dependencies]
prost-build = "0.11"
[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
hidb = { path = "../../../src/memory/memory" }
nervous-system = { path = "mesh" }
wasmtime = "18.0"
wasmtime-wasi = "18.0"
reqwest = { version = "0.11", features = ["json"] }
sysinfo = "0.30"
sha2 = "0.10"
hex = "0.4"
cap-std = "2.0"
uuid = { version = "1.0", features = ["v4"] }
ed25519-dalek = "2.1"
rand = "0.8"
axum = "0.6"
serde_json = "1.0"
cerebellum = { path = "../../../src/cognition/brain/cerebellum" }
git-evolution = { path = "immune/git-evolution" }
brain-evolution = { path = "../../../src/cognition/brain/evolution" }

# gRPC dependencies
tonic = "0.8"
prost = "0.11"
tokio-stream = "0.1"
