[package]
name = "brain-evolution"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
anyhow = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
git-evolution = { path = "../../../network/body/immune/git-evolution" }
cerebellum = { path = "../cerebellum" }
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
