[package]
name = "cerebellum"
version = "0.1.0"
edition = "2021"
description = "The Learning Engine: Paper-to-Code and Self-Fine-Tuning for IPPOC-OS"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-util = { version = "0.7", features = ["codec", "net"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
chrono = "0.4"
# For parsing papers/HTML
scraper = "0.18"
# For integration with OpenClaw/Node
nervous-system = { path = "../../../network/body/mesh" }
hidb = { path = "../../../memory/memory" }
clap = { version = "4.4", features = ["derive"] }
