[package]
name = "nervous-system"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
quinn = "0.10"
capnp = "0.17"
rustls = "0.21"
rcgen = "0.11"
mdns-sd = "0.10"
uuid = { version = "1.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
hex = "0.4"
bincode = "1.3"
ed25519-dalek = { version = "2.2", features = ["rand_core"] }
x25519-dalek = { version = "2.0", features = ["static_secrets", "getrandom"] }
chacha20poly1305 = "0.10"
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
getrandom = "0.2"
igd-next = "0.14"
rand = "0.8"
tracing = "0.1"
sys-info = "0.9.1"
