[package]
name = "inter-org"
version = "0.1.0"
edition = "2021"
description = "The Bilingual Transport Layer: Unifying P2P Mesh and Gateway Protocols"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Internal dependencies
# nervous-system = { path = ".." } # Commented out as it likely also relies on workspace and might not exist in this isolated context
